<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context=".MainActivity">

    <SearchView
        android:id="@+id/edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/Widget.Material3.SearchBar"
        android:layout_marginTop="10dp"
        />

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="340dp"
        app:layout_constraintTop_toBottomOf="@id/edit"
        android:src="@drawable/silla"
        android:scaleType="centerCrop"
        >
    </ImageView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/image"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/text1"
        android:id="@+id/text1"
        >

    </TextView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/text1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/text2"

        android:id="@+id/text2"
        >

    </TextView>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/text2"
        app:layout_constraintLeft_toLeftOf="parent"
        android:src="@drawable/star"
        android:id="@+id/star1"
        >

    </ImageView>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/text2"
        app:layout_constraintLeft_toRightOf="@id/star1"
        android:src="@drawable/star"
        android:id="@+id/star2"
        >

    </ImageView>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/text2"
        app:layout_constraintLeft_toRightOf="@id/star2"
        android:src="@drawable/star"
        android:id="@+id/star3"
        >

    </ImageView>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/text2"
        app:layout_constraintLeft_toRightOf="@id/star3"
        android:src="@drawable/star"
        android:id="@+id/star4"
        >

    </ImageView>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/text2"
        app:layout_constraintLeft_toRightOf="@id/star4"
        android:src="@drawable/star"
        android:id="@+id/star5"
        >

    </ImageView>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/text2"
        app:layout_constraintLeft_toRightOf="@id/star5"

        android:text="@string/opinions"

        android:id="@+id/text3"
        >

    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/text3"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/price"
        android:textStyle="bold"
        android:textSize="30sp"
        android:id="@+id/price"
        >

    </TextView>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/lock"
        app:layout_constraintTop_toBottomOf="@id/price"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/lock"
        >

    </ImageView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/price"
        app:layout_constraintLeft_toRightOf="@id/lock"
        android:text="@string/secure"
        android:id="@+id/secure"
        >

    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/price"
        app:layout_constraintLeft_toRightOf="@id/secure"
        android:text="@string/Stock"
        android:id="@+id/stock"
        >

    </TextView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/secure"
        android:text="@string/a_adir_a_la_cesta"
        android:id="@+id/button"
        >

    </Button>
</androidx.constraintlayout.widget.ConstraintLayout>